--- a/cssPractice/double-eleven/css/index.css
+++ b/cssPractice/double-eleven/css/index.css
@@ -27,7 +27,7 @@ html {
     margin: 5px auto;
     position: relative;
     background: #fff;
-    box-shadow: 0 2px 16px 0 rgba(66, 0, 140, 0.34)
+    box-shadow: 0 2px 16px 0 rgba(66, 0, 140, 0.34);
 }
 
 .gradient-border-test1 {
@@ -37,7 +37,7 @@ html {
     margin: 5px auto;
     background: #fff;
     position: relative;
-    box-shadow: 0 2px 16px 0 rgba(66, 0, 140, 0.34)
+    box-shadow: 0 2px 16px 0 rgba(66, 0, 140, 0.34);
 }
 
 .gradient-border-test1::after {
@@ -47,6 +47,6 @@ html {
     left: calc(-1 * 5px);
     height: calc(100% + 5px * 2);
     width: calc(100% + 5px * 2);
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82); border-radius: calc(2 * 5px); 
+    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);; border-radius: calc(2 * 5px);
     z-index: -1;
 }
